cabal-version:       2.1

-- The name of the package.
name:                fplll

-- The package version.  See the Haskell package versioning policy (PVP)
-- for standards guiding when and how versions should be incremented.
-- https://wiki.haskell.org/Package_versioning_policy
-- PVP summary:      +-+------- breaking API changes
--                   | | +----- non-breaking API additions
--                   | | | +--- code changes with no API change
version:             0.1.0.0

-- A short (one-line) description of the package.
synopsis:            Haskell bindings to fplll

-- A longer description of the package.
-- description:

-- The license under which the package is released.
license:             LGPL-2.1-or-later

-- The file containing the license text.
license-file:        LICENSE

-- The package author(s).
author:              Lance Roy

-- An email address to which users can send suggestions, bug reports, and
-- patches.
maintainer:          ldr709@gmail.com

-- A copyright notice.
-- copyright:

category:            Math

build-type:          Configure


library
  -- Modules exported by the library.
  exposed-modules:     Math.Lattices.Fplll

  -- Modules included in this library but not exported.
  -- other-modules:

  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:

  -- Other library packages from which modules are imported.
  build-depends:       base >=4.12 && <4.13, hgmp >= 0.1.1

  pkgconfig-depends:   fplll >=5.3.0 && <6.0

  -- Directories containing source files.
  hs-source-dirs:      src

  cxx-sources:         cbits/bindings.cpp

  -- Base language which the package is written in.
  default-language:    Haskell2010

Test-Suite test
  type:                exitcode-stdio-1.0
  main-is:             test/test.hs
  build-depends:       base >=4.12 && <4.13, fplll
  default-language:    Haskell2010
